Migrates Horizon to use KeystoneClient
References blueprint novaclient-migration. Fixes bug 848399. As a bonus it also fixes bug 882784.

This merge moves Horizon off of openstackx and novaclient for authentication and keystone management. Instead it uses the new python-keystoneclient library.

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -77,6 +77,7 @@ extra-paths =
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
     ${buildout:directory}/parts/python-novaclient
+    ${buildout:directory}/parts/python-keystoneclient
 
 
 ## Dependencies fetch from git
@@ -94,6 +95,11 @@ as_egg = True
 [python-novaclient]
 recipe = zerokspot.recipe.git
 repository = git://github.com/rackspace/python-novaclient.git
+as_egg = True
+
+[python-keystoneclient]
+recipe = zerokspot.recipe.git
+repository = git://github.com/4P/python-keystoneclient.git
 as_egg = True
 
 ## Dependencies fetched from launchpad
